# CHRONOS

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
airflow/dags/: stock_ingestion_dag.py
chronos/api/: main.py
chronos/data/: ingestion.py
chronos/models/: sql.py
chronos/schemas/: stock.py
chronos/utils/: db.py  logger.py
docker/: Dockerfile.airflow  Dockerfile.mlflow  init-db.sql
tests/: test_api.py  test_ingestion.py
